Integrasi sonarqube + clean code